# Proyecto-Final

./: CMakeLists.txt  DiagramaJuego.pptx  Evolucion_Proyecto.docx  Momento 1.docx  bart.cpp  bart.h  fuego.cpp  fuego.h  gema.cpp  gema.h  hacha.cpp  hacha.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  nivel.cpp  nivel.h  nivel1.cpp  nivel1.h  objeto.cpp  objeto.h  parca.cpp  parca.h  personaje.cpp  personaje.h  recursos.qrc  registerdialog.cpp  registerdialog.h  ventana.cpp  ventana.h
